package com.directi.training.dip.exercise.solution;

import java.io.IOException;

public interface GeneralEncodingModule {
    public void encodeWithFiles()  throws IOException;
    public void encodeBasedOnNetworkAndDatabase()  throws IOException;
}


